--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,10 @@ body{
     text-align: -webkit-center
 }
 
+.card:hover .about-text{
+    height: 79px;
+}
+
 .card .image {
     width: 100%;
     height: 100%;
@@ -37,7 +41,7 @@ body{
     background-color: white;
     margin-left: -70px;
     margin-top: -30px;
-    height: 50px;
+    height: 79px;
     width: 100%;
     border: 0px;
     border-radius: 0px 0px 5px 5px;
@@ -49,7 +53,7 @@ body{
     transition: .5s;
     border-radius: 5px;
 }
-.about:hover .image img {
+.card:hover .image img {
     opacity: .5;
     transform: translateX(30%);/*100%*/
 }
@@ -65,7 +69,7 @@ body{
     transform-origin: left;
     transform: perspective(2000px) rotateY(-90deg);
 }
-.about:hover .details {
+.card:hover .details {
     transform: perspective(2000px) rotateY(0deg);
 }
 .card .details .center {
@@ -82,15 +86,17 @@ body{
     padding: 0;
     color: #ff3636;
     line-height: 20px;
-    font-size: 20px;
+    font-size: 35px;
     text-transform: uppercase;
 }
 .card .details .center h1 span {
-    font-size: 14px;
+    font-size: 20px;
+    padding: 10px;
     color: #262626;
 }
 .card .details .center p {
     margin: 10px 0;
+    font-size: 25px;
     padding: 0;
     color: #262626;
 }
@@ -101,12 +107,13 @@ body{
 
 .card .details .center ul{
     padding: 0px;
+    font-size: 25px;
 }
 
 @media only screen and (max-width: 992px) {
     .card {
-        width: 75%;
-        height: 600px;
+        width: 90%;
+        height: 700px;
     }
     .card .details{
         height: 93%;
@@ -117,5 +124,13 @@ body{
     .card .details{
         height: 93%;
     }
+    .card:hover .about-text{
+        height: 71px;
+    }
 }
+
+@media (hover: none) {
+    .card:hover { color: inherit; }
+}
+
 
