--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,7 @@ body{
     margin-top: -30px;
     height: 79px;
     width: 100%;
+    font-size: 40px;
     border: 0px;
     border-radius: 0px 0px 5px 5px;
     padding: 3px;
