--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ body{
 }
 
 .card:hover .about-text{
-    height: 79px;
+    height: 90px;
 }
 
 .card .image {
@@ -32,8 +32,8 @@ body{
 
 .p-bottomAndTop{
     text-align: -webkit-center;
-    padding-top: 40px;
-    padding-bottom: 40px;
+    padding-top: 60px;
+    padding-bottom: 60px;
 }
 
 .about .about-text{
@@ -41,10 +41,11 @@ body{
     background-color: white;
     margin-left: -70px;
     margin-top: -30px;
-    height: 79px;
+    height: 90px;
     width: 100%;
     font-size: 40px;
     border: 0px;
+    position: relative;
     border-radius: 0px 0px 5px 5px;
     padding: 3px;
 }
@@ -113,8 +114,8 @@ body{
 
 @media only screen and (max-width: 992px) {
     .card {
-        width: 90%;
-        height: 700px;
+        width: 100%;
+        height: 765px;
     }
     .card:hover .about-text{
         height: 100px;
