--- a/css/style.css
+++ b/css/style.css
@@ -61,14 +61,14 @@ body{
     opacity: 0.9;
     left: 0;
     width: 100%;
-    height: 87%;
+    height: 90%;
     background-color: white;
     border-radius: 5px 5px 0px 0px;
     transition: .5s;
     transform-origin: left;
     transform: perspective(4000px) rotateY(-90deg);
 }
-.card:hover .details {
+.card .details {
     transform: perspective(4000px) rotateY(0deg);
 }
 
@@ -110,13 +110,15 @@ body{
     font-size: 35px;
 }
 
+
+
 @media only screen and (max-width: 992px) {
     .card {
         width: 100%;
         height: 765px;
     }
     .card:hover .about-text{
-        height: 100px;
+        height: 90px;
     }
 }
 
