--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/2/2c/Milkyway-galaxy-sky-stars_-_West_Virginia_-_ForestWander.jpg/1200px-Milkyway-galaxy-sky-stars_-_West_Virginia_-_ForestWander.jpg);
+    background: url(/img/bg.jpg);
 }
 
 .card {
@@ -82,6 +82,9 @@ body{
     transform: translateY(-50%);
 }
 .card .details .center h1 {
+    background: url(/img/bg.jpg) no-repeat;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
     margin: 0;
     padding: 0;
     color: #ff3636;
